--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "lodash.debounce": "^4.0.8",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
